# SmartPool.near

./: .gitignore  README.md
agent/: agent.py  metadata.json  polymarket_scrape.py
app/: .dockerignore  .env_template  .gptignore  Dockerfile  docker-compose.yml  next.config.js  package.json
app/deploy/: build.py  deploy.py
app/prisma/: schema.prisma
app/prisma/migrations/20241009025322_init/: migration.sql
app/prisma/migrations/20241029181440_oracle/: migration.sql
app/prisma/migrations/20241029182347_action_pool/: migration.sql
app/prisma/migrations/20241029212322_jobs_update/: migration.sql
app/prisma/migrations/20241029214219_job_update/: migration.sql
app/src/: config.js
app/src/__tests__/: apiEndpoints.test.js  jobService.test.js  serviceFunctions.test.js
app/src/app/: app.module.css  globals.css  layout.js  list.js  page.js
app/src/components/: Card.module.css  DepositForm.jsx  PoolCard.jsx  WithdrawForm.jsx  navigation.js
app/src/services/: databaseService.js  jobService.js  nearAiService.js  polyService.js  poolService.js  smartContractService.js  swapService.js
oracle/: core_functions.py  exchange.py  get_user_balance.py  main.py  pool_api_client.py  requirements.txt
smart_contracts/: Cargo.toml  README.md  build.sh  deploy-testnet.sh  test.sh
smart_contracts/controller/: Cargo.toml
smart_contracts/controller/src/: lib.rs
smart_contracts/pool/: Cargo.toml
smart_contracts/pool/src/: lib.rs
smart_contracts/src/: lib.rs
src/app/: app.module.css  page.js
trusted_jobs/: core_functions.py  job_processor.py
(+13 files in other folders)
