[package]
name = "controller"
description = "smartpool.near - Main Controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
near-contract-standards = { version = "5.5.0", features = [] }
near-token = "0.3.0"
schemars = "0.8"
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
near-workspaces = { version = "0.11.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
getrandom = { version = "0.2", features = ["js"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
#async-std = "1.10.0"
borsh = "1.5.1"
